--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
@@ -40,6 +40,12 @@
                 <label>Название файла:</label>
                 <input type="text" id="fileName" readonly>
             </div>
+
+            <!-- Новое поле для ввода номера документа -->
+            <div class="form-group">
+                <label>Номер документа:</label>
+                <input type="number" id="documentNumber" required>
+            </div>
         </div>
 
         <div class="main-content">
@@ -73,10 +79,12 @@ $(document).ready(function() {
     $('#uploadBtn').on('click', function() {
         const fileInput = document.getElementById('fileInput');
         const file = fileInput.files[0];
+        const documentNumber = $('#documentNumber').val(); // Получаем номер документа
 
-        if (file) {
+        if (file && documentNumber) {
             const formData = new FormData();
             formData.append('file', file);
+            formData.append('document_number', documentNumber); // Добавляем номер документа в FormData
 
             // Получаем CSRF токен
             const csrfToken = getCookie('csrftoken');
@@ -95,6 +103,7 @@ $(document).ready(function() {
                     $('#editor').html(response.content); // Обновляем редактор новым содержимым
                     $('#fileInput').val(''); // Очищаем поле ввода файла
                     $('#fileName').val(''); // Очищаем отображение имени файла
+                    $('#documentNumber').val(''); // Очищаем номер документа
                     $('#uploadBtn').prop('disabled', true); // Снова отключаем кнопку загрузки
                 },
                 error: function(xhr, status, error) {
