--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
@@ -53,7 +53,7 @@
             <!--            </div>-->
         </div>
 
-        <textarea id="textPreview" readonly></textarea>
+        <textarea id="textPreview"></textarea>
     </div>
 
     <div class="action-buttons">
