--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
@@ -34,6 +34,10 @@
             </svg>
             Загрузить
         </button>
+        <div id="uploadProgress" class="progress-container" style="display: none;">
+            <div id="uploadProgressBar" class="progress-bar"></div>
+            <div id="uploadProgressText" class="progress-text">Загрузка...</div>
+        </div>
     </div>
 
     <div class="files-list">
