--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/base.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/base.html
@@ -1,10 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>dfd</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles.css'%}">
+    <title>{% block title %}
+        Base title
+        {% endblock %}
+    </title>
 </head>
 <body>
-    <h1>sfsfsf</h1>
+<nav class="nav-bar">
+    <div class="nav-container">
+        <a href="{%url 'work_for_ilia:index' %}" class="nav-link active">Главная</a>
+        <a href="{%url 'work_for_ilia:cities' %}" class="nav-link">Поиск городов</a>
+        <a href="{%url 'work_for_ilia:statistics' %}" class="nav-link">Статистика</a>
+    </div>
+</nav>
+{% block body %}
+Base Body
+{% endblock %}
+
+{% block extra_js %}
+{% endblock %}
 </body>
 </html>
