--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/index.html
@@ -1,12 +1,10 @@
+{% extends "work_for_ilia/base.html" %}
 {% load static %}
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Конвертер документов в TXT</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css'%}">
-</head>
-<body>
+{% block title %}
+Конвертер документов в TXT
+{% endblock %}
+
+{% block body %}
 <div id="splash-screen">
     <h1 class="splash-title">Lazy Ilia</h1>
 </div>
@@ -71,11 +69,11 @@
         </button>
     </div>
 </div>
-
+{% block extra_js %}
 <script src="{% static 'js/app.js' %}"></script>
 <script>
     const uploadUrl = "{% url 'work_for_ilia:index' %}"; // Получаем URL из Django
     const updateUrl = "{% url 'work_for_ilia:update' %}"; // Получаем URL из Django
 </script>
-</body>
-</html>
+{% endblock %}
+{% endblock %}
