update some moments

--- a/lazy_ilya/work_for_ilia/static/css/styles.css
+++ b/lazy_ilya/work_for_ilia/static/css/styles.css
@@ -172,7 +172,7 @@ input[type="file"] {
 .preview-section {
     display: flex;
     gap: 2rem;
-    margin-bottom: 2rem;
+    margin: 2rem 0;
 }
 
 .files-preview-list {
