update some moments

--- a/lazy_ilya/work_for_ilia/static/css/styles.css
+++ b/lazy_ilya/work_for_ilia/static/css/styles.css
@@ -175,6 +175,22 @@ input[type="file"] {
     margin: 2rem 0;
 }
 
+.sticky-header {
+    position: sticky; /* Делаем заголовок липким */
+    top: 0; /* Прилипает к верхней части окна браузера */
+    background-color: var(--card-bg); /* Задаем фон, чтобы заголовок не сливался с фоном при прилипании */
+    z-index: 10; /* Устанавливаем z-index, чтобы заголовок был поверх других элементов */
+}
+
+.sticky-list {
+    position: sticky; /* Делаем контейнер списка липким */
+    top: 40px; /* Расстояние от верхней части окна браузера (учитываем высоту заголовка) */
+}
+.sticky-textarea {
+    position: sticky; /* Делаем текстовое поле липким */
+    top: 60px; /* Расстояние от верхней части окна браузера (учитываем высоту заголовка и контейнера списка) */
+
+}
 .files-preview-list {
     flex: 1;
     background-color: var(--card-bg);
