убрал скролл бар у просмтра содержимого и запретил пользователю менять размер блока с содержимом текста документа

--- a/lazy_ilya/work_for_ilia/static/css/styles.css
+++ b/lazy_ilya/work_for_ilia/static/css/styles.css
@@ -273,7 +273,8 @@ textarea {
     padding: 1rem;
     border: 1px solid var(--border-color);
     border-radius: 4px;
-    resize: vertical;
+    overflow: hidden;
+    resize: none;
     font-family: 'Consolas', monospace;
     font-size: 0.9rem;
 }
