--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -3,26 +3,34 @@
 {% load static %}
 
 {% block title %}
-Поиск городов
+    Поиск городов
 {% endblock %}
 
 {% block body %}
-<div class="container search-container">
-    <h1>Поиск городов России</h1>
-    <div class="search-wrapper">
-        <input type="text" class="search-input" id="citySearch" placeholder="Введите название города...">
-        <div class="suggestions-list" id="suggestionsList"></div>
+    <div class="container search-container">
+        <h1>Поиск городов России</h1>
+        <div class="search-wrapper">
+            <label for="citySearch"></label><input type="text" class="search-input" id="citySearch"
+                                                   placeholder="Введите название города...">
+            <div class="suggestions-list" id="suggestionsList"></div>
+        </div>
+        <div class="cities-grid" id="citiesGrid"></div>
     </div>
-    <div class="cities-grid" id="citiesGrid"></div>
-</div>
 
-{% block extra_js %}
-<script src="{% static 'js/cities.js' %}"></script>
-<!--<script>-->
-<!--    const uploadUrl = "{% url 'work_for_ilia:index' %}"; // Получаем URL из Django-->
-<!--    const updateUrl = "{% url 'work_for_ilia:update' %}"; // Получаем URL из Django-->
-<!--</script>-->
-{% endblock %}
+    {% block extra_js %}
+        <script>
+            // Создаем глобальную переменную для хранения данных
+            console.log('Cities JSON:', '{{ cities_json|escapejs }}');
+            window.citiesData = JSON.parse('{{ cities_json|escapejs }}');
+        </script>
+        <script src="{% static 'js/cities.js' %}"></script>
+        <!-- Передача данных из Django в JavaScript -->
+
+        <!--<script>-->
+        <!--    const uploadUrl = "{% url 'work_for_ilia:index' %}"; // Получаем URL из Django-->
+        <!--    const updateUrl = "{% url 'work_for_ilia:update' %}"; // Получаем URL из Django-->
+        <!--</script>-->
+    {% endblock %}
 
 {% endblock %}
 
