--- a/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
+++ b/lazy_ilya/work_for_ilia/templates/work_for_ilia/cities.html
@@ -12,28 +12,31 @@
         <h1>Поиск городов России</h1>
 
         <!-- Upload section -->
-        <div class="upload-section" style="justify-content: center">
-            <label for="cityFileInput" class="upload-btn">
-                <svg width="16" height="16" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
-                    <path fill="currentColor" d="M8 0L3 5h3v8h4V5h3L8 0z"></path>
-                    <path fill="currentColor" d="M15 11v3H1v-3H0v4h16v-4h-1z"></path>
-                </svg>
-                Добавить список городов
-                <input type="file" id="cityFileInput" accept=".doc,.docx">
-            </label>
+        {% if is_admin %}
+            <div class="upload-section" style="justify-content: center">
+                <label for="cityFileInput" class="upload-btn">
+                    <svg width="16" height="16" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
+                        <path fill="currentColor" d="M8 0L3 5h3v8h4V5h3L8 0z"></path>
+                        <path fill="currentColor" d="M15 11v3H1v-3H0v4h16v-4h-1z"></path>
+                    </svg>
+                    Добавить список городов
+                    <input type="file" id="cityFileInput" accept=".doc,.docx">
+                </label>
 
-            <button id="uploadCityFileBtn" class="primary-btn">
-                <svg width="16" height="16" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
-                    <path fill="currentColor" d="M8 0L3 5h3v8h4V5h3L8 0z"></path>
-                </svg>
-                Загрузить
-            </button>
+                <button id="uploadCityFileBtn" class="primary-btn">
+                    <svg width="16" height="16" viewBox="0 0 16 16" style="vertical-align: middle; margin-right: 8px;">
+                        <path fill="currentColor" d="M8 0L3 5h3v8h4V5h3L8 0z"></path>
+                    </svg>
+                    Загрузить
+                </button>
 
-            <div id="cityUploadProgress" class="progress-container">
-                <div id="cityUploadProgressBar" class="progress-bar"></div>
-                <div id="cityUploadProgressText" class="progress-text">Загрузка...</div>
+                <div id="cityUploadProgress" class="progress-container">
+                    <div id="cityUploadProgressBar" class="progress-bar"></div>
+                    <div id="cityUploadProgressText" class="progress-text">Загрузка...</div>
+                </div>
             </div>
-        </div>
+        {% endif %}
+
 
         <div class="search-container">
             <div class="search-wrapper">
